--- a/src/pages/inc/Header.module.scss
+++ b/src/pages/inc/Header.module.scss
@@ -21,11 +21,13 @@ body{
   font-family: 'Batang_Bold', sans-serif;
 }
 
-.sub-title {
-  font-family: 'Batang_Bold', sans-serif;
-  color: #22741C;
+
+.footer{
+
+  text-align: center;
+  padding-top:20px;
+  padding-bottom:20px;
+  font-size: 14px;
 }
-.sub-title-menu {
-  font-size: 1.9em;
-}
+
 
