--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -10,6 +10,15 @@ $container-background: #F6F6F6;
 }
 
 
+.link:hover {
+  color: #000000;
+  text-decoration:none;
+}
+.link {
+  color: #000000;
+}
+
+
 
 .in-container {
   background: #ffffff;
