--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -28,3 +28,20 @@ $container-background: #F6F6F6;
   font-family: 'Title_Light', sans-serif;
   color: #000000;
 }
+
+
+.image-container {
+  position: relative;
+
+  .image-blank {
+    height: 180px;
+  }
+
+  .tag {
+    position: absolute;
+    top: 6%;
+    left: 6%;
+  }
+}
+
+
