--- a/src/pages/villages/Village.module.scss
+++ b/src/pages/villages/Village.module.scss
@@ -1,1 +1,20 @@
-$container-background: #F6F6F6;
+
+.tabs {
+  border-top: 3px solid #22741C;
+  height: 30px;
+  line-height: 30px;
+}
+
+.tab {
+
+  background: #F6F6F6;
+
+  a:hover, a:link, a:active {
+    font-weight: bold;
+    color: #5D5D5D;
+    text-decoration: none;
+    background-color: transparent;
+
+  }
+}
+
