--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -1,3 +1,4 @@
+@import "../../index.module";
 
 .link:hover {
   color: #000000;
@@ -22,10 +23,15 @@
     height: 180px;
   }
 
-  .tag {
+  .badge-crops {
     position: absolute;
     top: 6%;
     left: 6%;
+  }
+  .badge{
+    position: absolute;
+    bottom: 6%;
+    right: 6%;
   }
 }
 
