--- a/src/pages/mentors/Mentors.module.scss
+++ b/src/pages/mentors/Mentors.module.scss
@@ -1,33 +1,35 @@
 @import "../../index.module";
 
 .card-container {
-
+  margin-top: 1rem;
+  //border: 1px solid rgba(0, 0, 0, 0.1);
+  //background: #ffffff;
+  padding:15px;
+}
+.cards-container {
   margin-top: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background: #ffffff;
   padding:15px;
-
-  .card-image-col {
-
-    padding:0;
-
-    .card-image {
-      width: 100%;
-      height: 200px;
-
-    }
-  }
-
-  .card-contents-container {
-    //background: red;
-    margin-left: 10px;
-
-    .card-contents{
-      padding-top: 10px;
-      color: #5D5D5D;
-    }
-  }
-
 }
+.card-image-col {
+  padding:0;
+  .card-image {
+    width: 100%;
+    height: 200px;
+
+  }
+}
+.card-contents-container {
+  //background: red;
+  margin-left: 10px;
+
+  .card-contents{
+    padding-top: 10px;
+    color: #5D5D5D;
+  }
+}
+
+
 
 
