멘토 상세 구현

--- a/src/pages/inc/Header.module.scss
+++ b/src/pages/inc/Header.module.scss
@@ -29,7 +29,7 @@ body{
   padding-top:20px;
   padding-bottom:20px;
   font-size: 14px;
-  height: 100px;
+  height: auto;
   background: #fff;
 }
 
