--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -4759,6 +4759,9 @@ input[type="button"].btn-block {
 .card-columns .card {
   margin-bottom: 0.75rem;
 }
+.card-columns-custom .card {
+  margin-bottom: 0.75rem;
+}
 
 @media (min-width: 576px) {
   .card-columns {
@@ -4775,6 +4778,23 @@ input[type="button"].btn-block {
     display: inline-block;
     width: 100%;
   }
+
+
+  .card-columns-custom {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-gap: 1.25rem;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1;
+  }
+  .card-columns-custom .card {
+    display: inline-block;
+    width: 100%;
+  }
+
 }
 
 .accordion > .card {
