--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -1,19 +1,8 @@
 $container-background: #F6F6F6;
 
 
-//.blog-container {
-//
-//  margin-top: 1rem;
-//  border: 1px solid rgba(0, 0, 0, 0.1);
-//  background: #ffffff;
-//  padding-top:15px;
-//  padding-bottom: 5rem;
-//
-//  .end-button-top {
-//
-//    padding-top: 3vw;
-//  }
-//}
+
+
 
 .blog-container-fluid {
 
@@ -23,26 +12,61 @@ $container-background: #F6F6F6;
 
 .blog-container {
   background: #ffffff;
-  padding-top: 1rem;
+  //padding-top: 1.5rem;
 
-  .blog-title {
 
-    margin-bottom: 3rem;
+  .blog-header {
+    margin-top: 1rem;
+    padding-bottom: 1rem;
+    font-size: 1.5em;
+    border-bottom: 3px solid #22741C;
   }
 
-  .blog-post {
+  .blog-title {
+    margin-top: 1rem;
+    font-weight: bold;
+    margin-bottom: 0;
+  }
+
+  .blog-post-container {
 
     padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    //background: #d39e00;
 
-    .post-image {
-      width: 150px;
-      height: 150px;
+    .blog-image{
+
+      width: 100%;
+      max-height: 160px;
+      height: 160px;
+    }
+    .blog-post{
+
+      //margin-top: 20px;
+      margin-left: 10px;
+      min-height: 110px;
+
+      .blog-post-contents{
+
+        padding-top: 10px;
+        color: #5D5D5D;
+      }
+    }
+
+
+    .timestamp {
+      margin-left: 10px;
+      color: #4e555b;
+      font-size: 0.8rem;
     }
 
   }
 }
+
+
+
+
 
 
 
@@ -70,8 +94,17 @@ $container-background: #F6F6F6;
 
 
 
-
-
+.empty-content {
+  font-size: 1.3rem;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+}
+.icon {
+  //color:#000000;
+  font-size: 1.1em;
+  margin-right: 0.6em;
+}
 
 .link:hover {
   color: #000000;
