--- a/src/pages/mentors/Mentors.module.scss
+++ b/src/pages/mentors/Mentors.module.scss
@@ -1,35 +1,32 @@
 @import "../../index.module";
 
-.card-container {
-  margin-top: 1rem;
-  //border: 1px solid rgba(0, 0, 0, 0.1);
-  //background: #ffffff;
-  padding:15px;
-}
-.cards-container {
-  margin-top: 1rem;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background: #ffffff;
-  padding:15px;
-}
-.card-image-col {
-  padding:0;
-  .card-image {
-    width: 100%;
-    height: 200px;
 
-  }
-}
-.card-contents-container {
-  //background: red;
-  margin-left: 10px;
+.profile-container {
 
-  .card-contents{
-    padding-top: 10px;
-    color: #5D5D5D;
+  text-align: center;
+  margin-bottom: 20px;
+
+  .mentoring-button {
+
+    margin-top: 20px;
   }
 }
 
+.profile-image{
 
+  border: 1.5px solid #ffffff;
+  width: 200px;
+  height: 200px;
+}
+.profile-info{
+  margin-top: 20px;
+  margin-left: 20px;
+}
 
+@media (min-width: 576px) {
 
+  .profile-info{
+    margin-top: 0px;
+    margin-left: 20px;
+  }
+}
