redux를 통한 로그인 로그아웃 처리

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -109,6 +109,7 @@ $container-background: #F6F6F6;
 .link:hover {
   color: #000000;
   text-decoration:none;
+  cursor: pointer;
 }
 .link {
   color: #000000;
