--- a/src/pages/mentors/Mentors.module.scss
+++ b/src/pages/mentors/Mentors.module.scss
@@ -23,6 +23,13 @@
   margin-left: 20px;
 }
 
+.scroll-container {
+
+  background: #fcf8e3;
+  height: 200px;
+  overflow: auto;
+}
+
 @media (min-width: 576px) {
 
   .profile-info{
