--- a/src/pages/inc/Header.module.scss
+++ b/src/pages/inc/Header.module.scss
@@ -26,10 +26,12 @@ body{
 
 
 .header-title {
-  font-family: 'Batang_Bold', sans-serif;
+  font-family: 'TitleV', sans-serif;
+  color:#FFBB00;
+  font-weight: bold;
 }
 .header-menu {
-  font-family: 'Batang_Bold', sans-serif;
+  font-family: 'Title_Medium', sans-serif;
 }
 
 .footer{
