--- a/src/pages/diaries/Diary.module.scss
+++ b/src/pages/diaries/Diary.module.scss
@@ -1,38 +1,41 @@
 @import "../../index.module";
 
+.diary-container {
 
-.profile-container {
+  margin-left: 30px;
 
-  text-align: center;
-  margin-bottom: 20px;
+  .diary-title{
 
-  .mentoring-button {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .diary-contents {
 
     margin-top: 20px;
+    line-height: 30px;
+    .diary-image {
+      width: 70%;
+    }
+    .contents {
+      font-family: 'Title_Light', sans-serif;
+      margin-top:20px;
+    }
   }
-}
-
-.profile-image{
-
-  border: 1.5px solid #ffffff;
-  width: 200px;
-  height: 200px;
-}
-.profile-info{
-  margin-top: 20px;
-  margin-left: 20px;
-}
-
-.infinite-loader {
-
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-@media (min-width: 576px) {
-
-  .profile-info{
-    margin-top: 0px;
-    margin-left: 20px;
+  .user-info {
+    font-family: 'Title_Light', sans-serif;
   }
+  .profile {
+
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+  }
+
+  .timestamp {
+    margin-left: 15px;
+    color: #C3C3C3;
+    //font-size: 0.8rem;
+  }
+
 }
