--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -2,8 +2,10 @@
 
 
 .sub-title {
-  font-family: 'Title_Light', sans-serif;
-  color: #000000;
+  font-family: 'TitleV', sans-serif;
+  color: #565656;
+  padding-top:7px;
+  padding-bottom:10px;
 }
 
 
