--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -92,3 +92,9 @@ $under-line: #E7E7E7;
   //padding-bottom: 15px;
   //border-bottom: 1px solid $under-line;
 }
+
+.source{
+  color: #7A7A7A;
+  font-size: 12px;
+  text-align: right;
+}
