--- a/src/pages/mentors/Mentors.module.scss
+++ b/src/pages/mentors/Mentors.module.scss
@@ -22,6 +22,8 @@
     margin-top: 1rem;
     padding-bottom: 15px;
     border-bottom: 1px solid $under-line;
+    width: 100%;
+
   }
 
   .blog-title {
