영농일지 작성

--- a/src/pages/mentees/Mentees.module.scss
+++ b/src/pages/mentees/Mentees.module.scss
@@ -20,8 +20,10 @@
     font-family: 'Title_Medium', sans-serif;
     font-size: 20px;
     margin-top: 1rem;
+    padding-top: 15px;
     padding-bottom: 15px;
     border-bottom: 1px solid $under-line;
+    width: 100%;
   }
 
   .blog-title {
