--- a/src/pages/inc/Header.module.scss
+++ b/src/pages/inc/Header.module.scss
@@ -42,14 +42,18 @@ body{
 }
 
 .footer{
-  margin-top: 1rem;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  text-align: center;
+
   padding-top:20px;
-  padding-bottom:20px;
+  margin-top: 1rem;
   font-size: 14px;
   height: auto;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   background: #fff;
+  text-align: center;
 }
 
 .member-bar {
