--- a/src/pages/diaries/Diary.module.scss
+++ b/src/pages/diaries/Diary.module.scss
@@ -4,7 +4,7 @@
 
   margin-left: 30px;
 
-  .diary-title{
+  .diary-title {
 
     padding-top: 20px;
     padding-bottom: 20px;
@@ -14,17 +14,21 @@
 
     margin-top: 20px;
     line-height: 30px;
+
     .diary-image {
       width: 70%;
     }
+
     .contents {
       font-family: 'Title_Light', sans-serif;
-      margin-top:20px;
+      margin-top: 20px;
     }
   }
+
   .user-info {
     font-family: 'Title_Light', sans-serif;
   }
+
   .profile {
 
     width: 30px;
@@ -42,4 +46,67 @@
 .button-group {
   padding-bottom: 20px;
   padding-right: 20px;
+}
+
+
+.infinite-loader {
+
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+
+.blog-container {
+  background: #ffffff;
+  padding-bottom: 30px;
+
+  .blog-header {
+    font-family: 'Title_Medium', sans-serif;
+    font-size: 20px;
+    margin-top: 1rem;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid $under-line;
+    width: 100%;
+  }
+
+  .blog-title {
+    margin-top: 1rem;
+    font-weight: bold;
+    margin-bottom: 0;
+  }
+
+  .blog-post-container {
+
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
+
+    .blog-image {
+
+      width: 100%;
+      max-height: 160px;
+      height: 160px;
+    }
+
+    .blog-post {
+
+      //margin-top: 20px;
+      margin-left: 10px;
+      min-height: 110px;
+
+      .blog-post-contents {
+
+        padding-top: 10px;
+        color: #5D5D5D;
+
+      }
+    }
+
+    .timestamp {
+      margin-left: 10px;
+      color: #4e555b;
+      font-size: 0.8rem;
+    }
+
+  }
 }
