특용작물 UI 구현

--- a/src/pages/openapis/OpenApis.module.scss
+++ b/src/pages/openapis/OpenApis.module.scss
@@ -8,6 +8,22 @@
 
     background: #F6F6F6;
   }
+
+  .table-thead-min {
+
+    background: #F6F6F6;
+    font-size: 13px
+  }
+
+}
+
+.table_loading {
+
+  position: absolute;
+  text-align: center;
+  left: 50%;
+  top: 30%;
+  //height: 100vh;
 }
 
 
