스피너 추가

--- a/src/pages/openapis/OpenApis.module.scss
+++ b/src/pages/openapis/OpenApis.module.scss
@@ -17,15 +17,7 @@
 
 }
 
-.table_loading {
+.custom-spinner {
 
-  position: absolute;
-  text-align: center;
-  left: 50%;
-  top: 30%;
-  //height: 100vh;
+  margin-left: 10px;
 }
-
-
-
-
