아이콘 수정

--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -4222,6 +4222,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-toggler {
+  float:left;
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
   line-height: 1;
