--- a/src/pages/inc/Header.module.scss
+++ b/src/pages/inc/Header.module.scss
@@ -18,6 +18,7 @@ body{
   margin: 0;
   text-align: right;
   font-size: 13px;
+  padding-bottom: 7px;
   padding-top:7px;
   color:#000000;
   line-height: 18px;
@@ -65,6 +66,10 @@ body{
   background: #d3d9df;
 }
 
+.mypage-chat-container {
+
+  padding-bottom: 15px;
+}
 
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
