빈 이미지 변경

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -30,6 +30,7 @@ footer {
 
 .custom-container-fluid-top {
   background: #fff;
+  //background: #FFBB00;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   text-align: center;
   padding:17px;
@@ -86,7 +87,6 @@ footer {
   margin-bottom: 20px;
   width:40px;
   height: 40px;
-  //font-size: 3.1em;
 }
 
 .link:hover {
@@ -102,8 +102,6 @@ footer {
 
   font-family: 'Title_Medium', sans-serif;
   font-size: 20px;
-  //padding-bottom: 15px;
-  //border-bottom: 1px solid $under-line;
 }
 
 .source{
