--- a/src/pages/inc/Header.module.scss
+++ b/src/pages/inc/Header.module.scss
@@ -81,6 +81,7 @@ body{
 
     width: 135px;
     height: 135px;
+    padding:2px;
     background: $under-line;
     border: 1px solid #BDBDBD;
     border-radius: 120px;
