채팅방 interval 설정

--- a/src/pages/chat/Chat.module.scss
+++ b/src/pages/chat/Chat.module.scss
@@ -5,8 +5,11 @@
 
   background: #E4F7BA;
   padding-bottom: 20px;
-}
 
+}
+.chat-container {
+  min-height: 400px;
+}
 .more {
   text-align: center;
   //padding-bottom:20px;
