서비스 소개 수정

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -44,7 +44,7 @@ footer {
   padding-right:0;
 }
 .in-container {
-
+  font-family: 'Title_Light', sans-serif;
   margin-top: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background: #ffffff;
