--- a/src/pages/inc/Header.module.scss
+++ b/src/pages/inc/Header.module.scss
@@ -42,6 +42,7 @@ body{
 .header-m {
   width: 100%;
   float:left;
+
   .header-title-m {
     text-align: center;
     font-family: 'TitleV', sans-serif;
@@ -98,7 +99,6 @@ body{
   font-family: 'Title_Light', sans-serif;
   margin-top: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  padding-top:15px;
   padding-bottom:80px;
   background: #ffffff;
 
@@ -106,21 +106,15 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 85%;
-    height: auto;
-    border-radius: 30px;
+    width: 100%;
+    border-radius: 10px;
   }
-
-  h2 {
-    line-height: 60px;
+  .title {
+    text-align: center;
+    font-size: 21px;
   }
   b {
     color:#F15F5F;
-  }
-  p {
-    font-size: 20px;
-    padding-left:65px;
-    padding-right:65px;
   }
 }
 
@@ -134,14 +128,6 @@ body{
   padding: 20px;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
-
-
 
 @media (min-width: 576px) {
 
@@ -152,6 +138,38 @@ body{
     padding-top:7px;
     padding-bottom:7px;
     color:#000000;
+  }
+
+  .in-container-introduce {
+    font-family: 'Title_Light', sans-serif;
+    margin-top: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding-top:15px;
+    padding-bottom:80px;
+    background: #ffffff;
+
+    .introduce-image {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 85%;
+      height: auto;
+      border-radius: 30px;
+    }
+
+    .title {
+      text-align: center;
+      line-height: 55px;
+      font-size: 32px;
+    }
+    b {
+      color:#F15F5F;
+    }
+    p {
+      font-size: 20px;
+      padding-left:65px;
+      padding-right:65px;
+    }
   }
 }
 
