메인 - 베스트 콘텐츠 생성

--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -29,3 +29,34 @@
 }
 
 
+.best-contents {
+
+  margin-left: 0;
+  margin-right: 0;
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
+
+  .blog-image {
+
+    width: 100%;
+    min-width: 130px;
+    max-height: 130px;
+    height: 130px;
+  }
+
+  .blog-post {
+
+    min-height: 110px;
+    border-bottom: 1px solid $under-line;
+
+    .blog-post-contents {
+
+      padding-top: 10px;
+      color: #5D5D5D;
+
+    }
+  }
+
+}
+
+
