--- a/src/pages/diaries/Diary.module.scss
+++ b/src/pages/diaries/Diary.module.scss
@@ -2,7 +2,8 @@
 
 .diary-container {
 
-  margin-left: 30px;
+  margin-left: 3%;
+  margin-right: 3%;
 
   .diary-title {
 
@@ -16,7 +17,11 @@
     line-height: 30px;
 
     .diary-image {
-      width: 70%;
+      padding-top: 30px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 90%;
     }
 
     .contents {
