맞춤 콘텐츠 생성 및 채팅 수정

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -97,6 +97,14 @@ footer {
 .link {
   color: #000000;
 }
+.link-w:hover {
+  color: #ffffff;
+  text-decoration:none;
+  cursor: pointer;
+}
+.link-w {
+  color: #ffffff;
+}
 
 .header-container{
 
