--- a/src/pages/openapis/OpenApis.module.scss
+++ b/src/pages/openapis/OpenApis.module.scss
@@ -45,6 +45,10 @@
   }
 }
 
+.basic-image {
+  width: 500px;
+  max-width: 100%;
+}
 .image {
   width: 400px;
   max-width: 100%;
@@ -55,4 +59,12 @@
 .custom-spinner {
 
   margin-left: 10px;
+}
+
+
+.card-title {
+  font-size: 10px;
+}
+.card-text{
+  font-size: 13px;
 }
