농장교육 개발 완료

--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -13,7 +13,9 @@
   position: relative;
 
   .image-blank {
-    height: 180px;
+    display: block; margin: 0px auto;
+    height: 130px;
+
   }
 
   .badge-crops {
