교육농장 상세보기 개발

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -124,6 +124,11 @@ footer {
   padding-right: 10px;
 }
 
+.right-btn{
+  text-align: right;
+  padding-right: 10px;
+}
+
 
 .col-p-t {
   padding-top:2px;
