--- a/src/pages/openapis/OpenApis.module.scss
+++ b/src/pages/openapis/OpenApis.module.scss
@@ -43,6 +43,12 @@
     background: #EBF7FF;
     border-bottom: 1px solid $under-line;
   }
+  .modal-td-g {
+    text-align: center;
+    width: 130px;
+    background: #E3FFDB;
+    border-bottom: 1px solid $under-line;
+  }
 }
 
 .basic-image {
