--- a/src/pages/inc/Header.module.scss
+++ b/src/pages/inc/Header.module.scss
@@ -122,6 +122,11 @@ body{
   color: #ffffff;
   background: #2D3742;
 }
+
+.footer_banner {
+  width: 120px;
+  height: 40px;
+}
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
   transition: margin-left .5s;
