--- a/src/pages/inc/Header.module.scss
+++ b/src/pages/inc/Header.module.scss
@@ -56,7 +56,19 @@ body{
   }
 }
 
+
+.empty-brand {
+  height: 30px;
+}
+
+.navbar-coll{
+  text-align: center;
+  margin: 0 auto;
+
+}
 .header-menu {
+  //padding-left:7px;
+  padding-right:7px;
   font-family: 'Title_Medium', sans-serif;
 }
 .member-bar {
