--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -32,10 +32,13 @@ footer {
   background: #ffffff;
 }
 
-
+.container-banner{
+  background: red;
+}
 .custom-container-fluid-top {
   background: #fff;
   //background: #FFBB00;
+
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   text-align: center;
   padding:17px;
@@ -136,4 +139,41 @@ footer {
 .date {
   color: #BDBDBD;
   font-size: 13px;
+}
+
+
+
+.float-button-position {
+
+  margin: 0 auto;
+  top: auto;
+  right: 8%;
+  bottom: 3%;
+  left: auto;
+  position: fixed;
+  cursor: pointer;
+
+  .float-button{
+    text-align: center;
+    border-radius: 30px;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    background: $main-color;
+  }
+}
+
+
+
+@media (min-width: 576px) {
+
+  .float-button-position {
+    margin: 0 auto;
+    top: auto;
+    right: 6%;
+    bottom: 5%;
+    left: auto;
+    position: fixed;
+    cursor: pointer;
+  }
 }
