--- a/src/pages/mentors/Mentors.module.scss
+++ b/src/pages/mentors/Mentors.module.scss
@@ -7,42 +7,48 @@
   background: #ffffff;
 }
 
+
+
+
+
+
 .profile-introduce {
   width: 100%;
   min-height: 300px;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.6);
   color: #ffffff;
 }
-
 .profile-container {
-
   text-align: center;
-
   .mentoring-button {
-
-    margin-top: 20px;
+    margin-top: 10px;
+    font-size: 13px;
   }
-
   .profile-image-container {
-
     margin-top: 20px;
-
     .profile-image {
-
-      border: 1.5px solid #ffffff;
-      width: 180px;
-      height: 180px;
+      border: 1px solid #ffffff;
+      width: 100px;
+      height: 100px;
     }
   }
-
   .profile-info {
+    font-size: 13px;
     text-align: left;
-    margin-top: 20px;
+    margin-top: 15px;
     margin-left: 20px;
-    line-height: 30px;
-    padding-bottom: 20px;
+    line-height: 20px;
+    padding-bottom: 10px;
+    .h1{
+      text-align: left;
+      font-size: 23px;
+      font-weight: bold;
+    }
   }
 }
+
+
+
 
 
 .mentors-cards {
@@ -78,10 +84,49 @@
   border: 1px solid $main-color;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 760px) {
 
-  .profile-info {
-    margin-top: 0px;
-    margin-left: 20px;
+  .profile-introduce {
+    width: 100%;
+    min-height: 300px;
+    background: rgba(0, 0, 0, 0.4);
+    color: #ffffff;
+  }
+
+
+  .profile-container {
+
+    text-align: center;
+
+    .mentoring-button {
+      font-size: 16px;
+      margin-top: 20px;
+    }
+
+    .profile-image-container {
+
+      margin-top: 20px;
+
+      .profile-image {
+
+        border: 1.5px solid #ffffff;
+        width: 180px;
+        height: 180px;
+      }
+    }
+
+    .profile-info {
+      font-size: 16px;
+      text-align: left;
+      margin-top: 20px;
+      margin-left: 20px;
+      line-height: 30px;
+      padding-bottom: 20px;
+      .h1{
+        font-weight: 500;
+        text-align: left;
+        font-size: 2.5rem;
+      }
+    }
   }
 }
