--- a/src/pages/diaries/Diary.module.scss
+++ b/src/pages/diaries/Diary.module.scss
@@ -13,6 +13,9 @@
 
   .diary-contents {
 
+    word-break: keep-all;
+    word-wrap: break-word;
+
     margin-top: 20px;
     margin-bottom: 20px;
     line-height: 30px;
