--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -5,6 +5,10 @@ $main-gray: #4e555b;
 $main-green: #2F9D27;
 
 
+.m-bg{
+  background: #2D3742;
+}
+
 .selector {
   padding-top:5px;
   padding-bottom:5px;
