경고메세지 처리

--- a/src/pages/inc/Header.module.scss
+++ b/src/pages/inc/Header.module.scss
@@ -48,7 +48,7 @@ body{
     font-family: 'TitleV', sans-serif;
     color:$main-color;
     font-weight: bold;
-    font-size: 3vh;
+    font-size: 30px;
 
     img {
       height: 35px;
