배너 삽입 및 경고메세지 수정

--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -1,6 +1,11 @@
 @import "../../index.module";
 
 
+.cc-banner {
+
+  max-height: 330px;
+  min-height: 180px;
+}
 .sub-title {
   font-family: 'TitleV', sans-serif;
   color: #565656;
