메인 모바일 대응

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -77,6 +77,14 @@ footer {
 }
 
 
+.in-container-two-row {
+  //margin-top: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding:15px;
+  background: #ffffff;
+}
+
+
 .empty-content {
 
   font-size: 1.3rem;
